src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Agent Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Delivery Address</fullName>
        </values>
        <values>
            <fullName>Awaiting Reason for Return</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed As Duplicate</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Documenting</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New Customer Comment</fullName>
        </values>
        <values>
            <fullName>New Incoming Email</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Customer Information</fullName>
        </values>
        <values>
            <fullName>Pending Material Availability</fullName>
        </values>
        <values>
            <fullName>Pending Recall</fullName>
        </values>
        <values>
            <fullName>Pending Returned Material</fullName>
        </values>
        <values>
            <fullName>Pending Service</fullName>
        </values>
        <values>
            <fullName>VOD RMA Received</fullName>
        </values>
        <values>
            <fullName>VOD Ready for Dispatch</fullName>
        </values>
        <values>
            <fullName>VPM Development</fullName>
        </values>
        <values>
            <fullName>With Admin</fullName>
        </values>
        <values>
            <fullName>With CTS</fullName>
        </values>
        <values>
            <fullName>With Development</fullName>
        </values>
        <values>
            <fullName>With Repairs</fullName>
        </values>
        <values>
            <fullName>With VOD Prod</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add a Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Contact_Email__c</fullName>
        <formula>Contact.Email_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alt Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Symptom__c</fullName>
        <label>Symptom / Service Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Account Update</fullName>
                </value>
                <value>
                    <fullName>Billing Inquiry or Dispute</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Import Export</fullName>
                </value>
                <value>
                    <fullName>Other (Ref. Subject</fullName>
                </value>
                <value>
                    <fullName>OTM Issue</fullName>
                </value>
                <value>
                    <fullName>Renew License</fullName>
                </value>
                <value>
                    <fullName>Report Request</fullName>
                </value>
                <value>
                    <fullName>Request Credits</fullName>
                </value>
                <value>
                    <fullName>Schedules</fullName>
                </value>
                <value>
                    <fullName>Software Browser</fullName>
                </value>
                <value>
                    <fullName>Software Content</fullName>
                </value>
                <value>
                    <fullName>Software Unlock</fullName>
                </value>
                <value>
                    <fullName>Software Update</fullName>
                </value>
                <value>
                    <fullName>Spam Email</fullName>
                </value>
                <value>
                    <fullName>Status Report Request</fullName>
                </value>
                <value>
                    <fullName>System/User Error</fullName>
                </value>
                <value>
                    <fullName>System Software</fullName>
                </value>
                <value>
                    <fullName>Training Records</fullName>
                </value>
                <value>
                    <fullName>Training Request</fullName>
                </value>
                <value>
                    <fullName>Vessel List</fullName>
                </value>
                <value>
                    <fullName>VOA</fullName>
                </value>
                <value>
                    <fullName>VOD Activation</fullName>
                </value>
                <value>
                    <fullName>VOD DVD drive</fullName>
                </value>
                <value>
                    <fullName>VOD Graphics Card</fullName>
                </value>
                <value>
                    <fullName>VOD HDD</fullName>
                </value>
                <value>
                    <fullName>VOD Memory</fullName>
                </value>
                <value>
                    <fullName>VOD Monitor</fullName>
                </value>
                <value>
                    <fullName>VOD Mother Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalBCC__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional BCC field.</description>
        <label>Additional BCC</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalCC__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional CC field.</description>
        <label>Additional CC</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalTo__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional To field. The SuppliedEmail (Web Email) value is added automatically on case creation if a valid Contact isn&apos;t associated.</description>
        <label>Additional To</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Case_Thread_Id__c</fullName>
        <description>A formula to generate the Salesforce Case Thread Id for display on detail pages or inclusion in email templates.</description>
        <formula>&quot;[ ref:_&quot; &amp; 
LEFT( $Organization.Id , 5) &amp; 
IF (MID ( $Organization.Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id,10), 
IF (MID ( $Organization.Id, 7, 1) &lt;&gt; &quot;0&quot;,RIGHT($Organization.Id, 9), 
IF (MID ( $Organization.Id, 8, 1) &lt;&gt;&quot;0&quot;, RIGHT($Organization.Id, 8), 
IF (MID ( $Organization.Id, 9, 1)&lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 7), 
IF (MID ( $Organization.Id,10, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 6), 
IF (MID ($Organization.Id, 11, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 5), 
IF(MID ( $Organization.Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id,4), 
IF (MID ( $Organization.Id, 13, 1) &lt;&gt; &quot;0&quot;,RIGHT($Organization.Id, 3), 
IF (MID ( $Organization.Id, 14, 1) &lt;&gt;&quot;0&quot;, RIGHT($Organization.Id, 2), &quot;&quot;) ) ) ) ) ) ) ) )
&amp; &quot;._&quot; &amp;LEFT( Id, 5) &amp; 
IF(MID ( Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 10), 
IF (MID ( Id, 7, 1)&lt;&gt; &quot;0&quot;, RIGHT(Id, 9), 
IF (MID ( Id, 8, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id,8), 
IF (MID ( Id, 9, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 7), 
IF (MID ( Id, 10,1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 6), 
IF (MID ( Id, 11, 1) &lt;&gt; &quot;0&quot;,RIGHT(Id, 5), 
IF (MID ( Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 4), 
IF (MID( Id, 13, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 3), 
IF (MID ( Id, 14, 1) &lt;&gt;&quot;0&quot;, RIGHT(Id, 2), &quot;&quot;) ) ) ) ) ) ) ) ) &amp; &quot;:ref ]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Disable_Email_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this field to true disables the Email Distribution feature on a case by case basis if Email Distribution is enabled.</description>
        <label>Disable Email Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2CP__ExtraEmails__c</fullName>
        <description>Stores all email addresses on inbound emails. This data is used by Auto Create Contacts, Auto Add Case Team Members and Auto Add Contact Roles.</description>
        <label>ExtraEmails</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__HistoryText_Inc_Private__c</fullName>
        <label>History Text Inc Private</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__HistoryText__c</fullName>
        <description>Contains a chronology of the most recent 25 public case comments (up to 32,000 chars) for inclusion in email templates. This field is updated when inbound emails are received and outbound emails are sent through the New Comment page.</description>
        <label>HistoryText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Knowledge_Base_URL__c</fullName>
        <label>Knowledge Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Most_Recent_Private_Comment_HTML__c</fullName>
        <description>Contains the most recent private comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record. Used when HTML Support is enabled.</description>
        <label>Most Recent Private Comment (HTML)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>E2CP__Most_Recent_Private_Comment__c</fullName>
        <description>Contains the most recent private comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record.</description>
        <label>Most Recent Private Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Most_Recent_Public_Comment_HTML__c</fullName>
        <description>Contains the most recent public comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record. Used when HTML Support is enabled.</description>
        <label>Most Recent Public Comment (HTML)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>E2CP__Most_Recent_Public_Comment__c</fullName>
        <description>Contains the most recent public comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record.</description>
        <label>Most Recent Public Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <formula>Contact.Ext__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IMO__c</fullName>
        <formula>Platform_Asset_Account__r.Vessel_IMO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMO#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KV_Sales_Agent_from_Account__c</fullName>
        <label>KV Sales Agent from Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Order__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Order__r.Master_Order__r.Id,  Order__r.Master_Order__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_Asset_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for the correct Platform or Asset Account</inlineHelpText>
        <label>Search Platform / Asset Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Platform / Asset Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_or_Service_Detail__c</fullName>
        <label>Product or Service Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activate VOD Unit</fullName>
                </value>
                <value>
                    <fullName>Courses Software</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>OTM Software</fullName>
                </value>
                <value>
                    <fullName>Questions about activation forms</fullName>
                </value>
                <value>
                    <fullName>Questions about an invoice you received</fullName>
                </value>
                <value>
                    <fullName>Questions about available services (e.g. airtime rate plans, GlobalCare)</fullName>
                </value>
                <value>
                    <fullName>Questions about policies (such as suspension or plan change policies)</fullName>
                </value>
                <value>
                    <fullName>Reactivate a suspended service</fullName>
                </value>
                <value>
                    <fullName>Suspend a service</fullName>
                </value>
                <value>
                    <fullName>Terminate a service</fullName>
                </value>
                <value>
                    <fullName>Update account or credit card information (new contact information, etc)</fullName>
                </value>
                <value>
                    <fullName>VOD Hardware</fullName>
                </value>
                <value>
                    <fullName>VOD-Online Software</fullName>
                </value>
                <value>
                    <fullName>VOD Order</fullName>
                </value>
                <value>
                    <fullName>VOD Software</fullName>
                </value>
                <value>
                    <fullName>webFTA Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_or_Service_Type__c</fullName>
        <label>Product or Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Account Change</fullName>
                </value>
                <value>
                    <fullName>Billing Inquiry or Dispute</fullName>
                </value>
                <value>
                    <fullName>Browser Problem</fullName>
                </value>
                <value>
                    <fullName>Courses</fullName>
                </value>
                <value>
                    <fullName>Custom Configuration</fullName>
                </value>
                <value>
                    <fullName>General Account or Service Inquiry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Changes</fullName>
                </value>
                <value>
                    <fullName>OTM</fullName>
                </value>
                <value>
                    <fullName>VOA - Online Assessments</fullName>
                </value>
                <value>
                    <fullName>VOD</fullName>
                </value>
                <value>
                    <fullName>VOD Online</fullName>
                </value>
                <value>
                    <fullName>VOD Product</fullName>
                </value>
                <value>
                    <fullName>VPM</fullName>
                </value>
                <value>
                    <fullName>Web FTA</fullName>
                </value>
                <value>
                    <fullName>Taskbooks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activated New Service</fullName>
                </value>
                <value>
                    <fullName>Activation Declined</fullName>
                </value>
                <value>
                    <fullName>Clone Info provided</fullName>
                </value>
                <value>
                    <fullName>Crew File Sent</fullName>
                </value>
                <value>
                    <fullName>Crew Issue resolved</fullName>
                </value>
                <value>
                    <fullName>Data Issue resolved</fullName>
                </value>
                <value>
                    <fullName>Enhancement declined</fullName>
                </value>
                <value>
                    <fullName>Enhancement made</fullName>
                </value>
                <value>
                    <fullName>File Sent</fullName>
                </value>
                <value>
                    <fullName>Issued Activation File</fullName>
                </value>
                <value>
                    <fullName>Issued Credit(s)</fullName>
                </value>
                <value>
                    <fullName>Issued License</fullName>
                </value>
                <value>
                    <fullName>No Fault</fullName>
                </value>
                <value>
                    <fullName>No Further Action</fullName>
                </value>
                <value>
                    <fullName>No Response from Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Provided Information</fullName>
                </value>
                <value>
                    <fullName>Provided Report</fullName>
                </value>
                <value>
                    <fullName>Provided User Training</fullName>
                </value>
                <value>
                    <fullName>Provision New VOD</fullName>
                </value>
                <value>
                    <fullName>Report Sent</fullName>
                </value>
                <value>
                    <fullName>Requested Batch ID</fullName>
                </value>
                <value>
                    <fullName>Solution Provided</fullName>
                </value>
                <value>
                    <fullName>Solution Sent</fullName>
                </value>
                <value>
                    <fullName>Spam Email - Closed</fullName>
                </value>
                <value>
                    <fullName>Terminated Account</fullName>
                </value>
                <value>
                    <fullName>Third Party Network Provider Issue</fullName>
                </value>
                <value>
                    <fullName>Third Party Vendor Malfunction</fullName>
                </value>
                <value>
                    <fullName>Train User</fullName>
                </value>
                <value>
                    <fullName>Transfer to Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolve_Date__c</fullName>
        <label>Resolve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOD_Production_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VOD Production Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (VOD Production Account)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VOD_Production_Order_No__c</fullName>
        <label>VOD Production Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmrgp__Merged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that performed the merge.</description>
        <label>Merged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csmrgp__Merged_Date_Time__c</fullName>
        <description>Date/Time that the case was merged.</description>
        <label>Merged Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>csmrgp__Subject_Conversation__c</fullName>
        <formula>TRIM(SUBSTITUTE(  SUBSTITUTE(   SUBSTITUTE(  SUBSTITUTE(  SUBSTITUTE( SUBSTITUTE(
Subject, &quot;Fwd:&quot;, &quot;&quot;), &quot;FW:&quot;, &quot;&quot;), &quot;Fw:&quot;, &quot;&quot;),&quot;RE:&quot;, &quot;&quot;), &quot;Re:&quot;, &quot;&quot;),&quot;[Email Loop Protection]&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject Conversation</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Billing_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Team</label>
        <queue>Billing_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_DCU_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>DCU Queue</label>
        <queue>KV_DCU_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KV_Support_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Support Queue</label>
        <queue>KV_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Order_Administration_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Administration</label>
        <queue>Order_Administration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VOD_Production_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>VOD Production Team</label>
        <queue>VOD_Production_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Billing_Queries</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Billing Queries</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCU</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>Case Record Type for the KV DCU Support Team for managing VOD Production and Case Escalations</description>
        <label>DCU</label>
    </recordTypes>
    <recordTypes>
        <fullName>KV_Production_Support</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>Case Record Type for the KV Support Team for managing VOD Production and Case Escalations</description>
        <label>KV Production Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>KV_Support</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>Videotel Support Case Record Type</description>
        <label>KV Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_Admin</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>Order Administration and customer service queries regarding orders</description>
        <label>Order Admin</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>